--- a/notebooks/hitl.ipynb
+++ b/notebooks/hitl.ipynb
@@ -15,6 +15,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1747b0fc",
    "metadata": {},
    "source": [
     "### Viewing Structured Outputs (Gmail agent)\n",
@@ -25,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f5c697c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +39,17 @@
     "    if not isinstance(result, dict):\n",
     "        print('(no structured outputs)')\n",
     "        return\n",
-    "    print('\nassistant_reply:\n', result.get('assistant_reply', ''))\n",
+    "    print('\n",
+    "assistant_reply:\n",
+    "', result.get('assistant_reply', ''))\n",
     "    tool_trace = result.get('tool_trace', '') or ''\n",
     "    if tool_trace:\n",
-    "        print('\ntool_trace (first', trace_chars, 'chars):\n', tool_trace[:trace_chars])\n",
+    "        print('\n",
+    "tool_trace (first', trace_chars, 'chars):\n",
+    "', tool_trace[:trace_chars])\n",
     "    else:\n",
-    "        print('\ntool_trace: (empty)')\n",
+    "        print('\n",
+    "tool_trace: (empty)')\n",
     "\n",
     "# Example usage after an agent run:\n",
     "# show_structured_outputs(response)\n"
@@ -50,9 +57,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ca216602",
    "metadata": {},
    "source": [
     "> Update: See `notebooks/UPDATES.md` for HITL environment flags, Gmail-specific HITL card display, and structured output fields used by external evaluators."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d4586c1",
+   "metadata": {},
+   "source": [
+    "### LangGraph 0.6 HITL Checklist\n",
+    "\n",
+    "- **Start Studio for live approvals**: run `langgraph up` and choose `email_assistant_hitl` or `email_assistant_hitl_memory_gmail`. The Agent Inbox card now shows normalized Gmail headers so approval context is clear.\n",
+    "- **Durable execution**: Our production graph wraps router/tool nodes with `@task` and relies on `langgraph.prebuilt.interrupt.HumanInterrupt`. When editing the code walkthrough below, keep those helpers in place so replays survive restarts.\n",
+    "- **Auto-accept for demos/tests**: set `HITL_AUTO_ACCEPT=1` to synthesize deterministic approvals (Questions receive a short synthetic answer). Leave it unset when reviewing drafts manually.\n",
+    "- **Live-first tests**: run the live suites before falling back to eval mode.\n",
+    "  ```bash\n",
+    "  ! pytest tests/test_live_smoke.py --agent-module email_assistant_hitl_memory_gmail\n",
+    "  ! pytest tests/test_live_hitl_spam.py --agent-module email_assistant_hitl_memory_gmail\n",
+    "  ```\n",
+    "  Use `EMAIL_ASSISTANT_EVAL_MODE=1` + `EMAIL_ASSISTANT_SKIP_MARK_AS_READ=1` only when you lack credentials.\n",
+    "- **Resume payloads**: See the cheatsheet in the ticket docs—Agent Inbox responds with `[{\"type\": \"accept\"}]`, `[{\"type\": \"response\", \"args\": \"...\"}]`, or `[{\"type\": \"edit\", ...}]` during HITL checkpoints. The code cells below demonstrate how to feed those payloads back via `Command(resume=[...])`."
    ]
   },
   {
@@ -782,6 +809,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c3bae3dd",
    "metadata": {},
    "source": [
     "> Note: When using interrupts, compile with a checkpointer and pass a unique `configurable.thread_id` in `config` so the graph can pause/resume."
@@ -911,6 +939,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7649354",
    "metadata": {},
    "source": [
     "> Note: Interrupts require a checkpointer and a unique `configurable.thread_id` in the run config; both are shown above."
@@ -1460,6 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e013ee47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,6 +1515,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6afe450b",
    "metadata": {},
    "source": [
     "## HITL Patterns (Appendix): interrupt_before=[\"tools\"]\n",
@@ -1496,6 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7cb14ae5",
    "metadata": {},
    "outputs": [],
    "source": [
