Address CodeRabbit feedback on notebook refresh

--- a/notebooks/agent.ipynb
+++ b/notebooks/agent.ipynb
@@ -92,8 +92,8 @@
     "# Load from .env file in the parent directory\n",
     "load_dotenv(\"../.env\")\n",
     "\n",
-    "# Set to 1 to auto-accept any human-in-the-loop prompts\n",
-    "os.environ[\"HITL_AUTO_ACCEPT\"] = \"1\""
+    "# Default to auto-accept in notebooks/tests but allow override\n",
+    "os.environ.setdefault(\"HITL_AUTO_ACCEPT\", \"1\")\n"
    ]
   },
   {
