--- a/notebooks/hitl.ipynb
+++ b/notebooks/hitl.ipynb
@@ -855,24 +855,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd321c51",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if os.getenv(\"NB_TEST_MODE\", \"0\") == \"0\":\n",
-    "    print(f\"\\nSimulating user accepting the {Interrupt_Object.value[0]['action_request']} tool call...\")\n",
-    "    for chunk in graph.stream(Command(resume=[{\"type\": \"accept\"}]), config=thread_config_1):\n",
-    "        if '__interrupt__' in chunk:\n",
-    "            Interrupt_Object = chunk['__interrupt__'][0]\n",
-    "            print(\"\\nINTERRUPT OBJECT:\")\n",
-    "            print(f\"Action Request: {Interrupt_Object.value[0]['action_request']}\")\n",
-    "else:\n",
-    "    print(\"[NB_TEST_MODE] Skipping interactive resume step.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c77baa35",
    "metadata": {},
    "outputs": [],
@@ -1507,7 +1489,7 @@
     "  'body': 'Thanks, I\\'ve just submitted my part.'\n",
     "}\n",
     "\n",
-    "config = {'configurable': {'thread_id': str(uuid.uuid4()), 'recursion_limit': 80}}\n",
+    "config = {'configurable': {'thread_id': str(uuid.uuid4())}, 'recursion_limit': 80}\n",
     "response = email_assistant.invoke({'email_input': email_input}, config=config)\n",
     "\n",
     "show_structured_outputs(response)\n"
