--- a/notebooks/memory.ipynb
+++ b/notebooks/memory.ipynb
@@ -351,20 +351,19 @@
     "        str: The content of the memory profile, either from existing memory or the default\n",
     "    \"\"\"\n",
     "    # Search for existing memory with namespace and key\n",
-    "    user_preferences = store.get(namespace, \"user_preferences\")\n",
-    "    \n",
+    "    existing = store.get(namespace, \"user_preferences\")\n",
+    "\n",
     "    # If memory exists, return its content (the value)\n",
-    "    if user_preferences:\n",
-    "        return user_preferences.value\n",
-    "    \n",
+    "    if existing:\n",
+    "        return existing.value\n",
+    "\n",
     "    # If memory doesn't exist, add it to the store and return the default content\n",
-    "    else:\n",
-    "        # Namespace, key, value\n",
-    "        store.put(namespace, \"user_preferences\", default_content)\n",
-    "        user_preferences = default_content\n",
-    "    \n",
+    "    if default_content is None:\n",
+    "        default_content = \"\"\n",
+    "    store.put(namespace, \"user_preferences\", default_content)\n",
+    "\n",
     "    # Return the default content\n",
-    "    return user_preferences "
+    "    return default_content\n"
    ]
   },
   {
@@ -413,6 +412,9 @@
     "    chain_of_thought: str = Field(description=\"Reasoning about which user preferences need to add / update if required\")\n",
     "    user_preferences: str = Field(description=\"Updated user preferences\")\n",
     "\n",
+    "# Reuse the evaluator client to avoid reconnecting on every update\n",
+    "memory_update_llm = init_chat_model(\"google_genai:gemini-2.5-pro\", temperature=0.0).with_structured_output(UserPreferences)\n",
+    "\n",
     "def update_memory(store, namespace, messages):\n",
     "    \"\"\"Update memory profile in the store.\n",
     "    \n",
@@ -422,19 +424,19 @@
     "        messages: List of messages to update the memory with\n",
     "    \"\"\"\n",
     "\n",
-    "    # Get the existing memory\n",
-    "    user_preferences = store.get(namespace, \"user_preferences\")\n",
+    "    # Get the existing memory (string content)\n",
+    "    existing = store.get(namespace, \"user_preferences\")\n",
+    "    current_profile = existing.value if existing else \"\"\n",
     "\n",
     "    # Update the memory\n",
-    "    llm = init_chat_model(\"google_genai:gemini-2.5-pro\", temperature=0.0).with_structured_output(UserPreferences)\n",
-    "    result = llm.invoke(\n",
+    "    result = memory_update_llm.invoke(\n",
     "        [\n",
-    "            {\"role\": \"system\", \"content\": MEMORY_UPDATE_INSTRUCTIONS.format(current_profile=user_preferences.value, namespace=namespace)},\n",
+    "            {\"role\": \"system\", \"content\": MEMORY_UPDATE_INSTRUCTIONS.format(current_profile=current_profile, namespace=namespace)},\n",
     "        ] + messages\n",
     "    )\n",
     "    \n",
     "    # Save the updated memory to the store\n",
-    "    store.put(namespace, \"user_preferences\", result.user_preferences)"
+    "    store.put(namespace, \"user_preferences\", result.user_preferences)\n"
    ]
   },
   {
