--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -25,7 +25,7 @@
     "  ! pytest tests/test_live_smoke.py --agent-module email_assistant_hitl_memory_gmail\n",
     "  ! pytest tests/test_live_hitl_spam.py --agent-module email_assistant_hitl_memory_gmail\n",
     "  ```\n",
-    "  These suites validate tool ordering, HITL guardrails, and reminder paths. Only after they succeed should you reach for offline flags (`EMAIL_ASSISTANT_EVAL_MODE=1`, `HITL_AUTO_ACCEPT=1`, `EMAIL_ASSISTANT_SKIP_MARK_AS_READ=1`).\n",
+    "  These suites validate tool ordering, HITL guardrails, and reminder paths. Only after they succeed should you reach for offline flags (`EMAIL_ASSISTANT_EVAL_MODE=1`, `HITL_AUTO_ACCEPT=1`, `EMAIL_ASSISTANT_SKIP_MARK_AS_READ=1`, `EMAIL_ASSISTANT_RECIPIENT_IN_EMAIL_ADDRESS=1`).\n",
     "- **Judge toggle**: set `EMAIL_ASSISTANT_LLM_JUDGE=1` (and optionally `EMAIL_ASSISTANT_JUDGE_STRICT=1`) to enable the Gemini 2.5 Flash correctness judge during pytest runs. Results are logged under `EMAIL_ASSISTANT_JUDGE_PROJECT` when `LANGSMITH_TRACING=true`.\n",
     "- **Notebook tips**: `NB_TEST_MODE=1` makes the datasets load quickly for CI. Clear it locally to see the full outputs and traces."
    ]
