Fix structured output prints in HITL notebook

--- a/notebooks/hitl.ipynb
+++ b/notebooks/hitl.ipynb
@@ -39,17 +39,12 @@
     "    if not isinstance(result, dict):\n",
     "        print('(no structured outputs)')\n",
     "        return\n",
-    "    print('\n",
-    "assistant_reply:\n",
-    "', result.get('assistant_reply', ''))\n",
+    "    print(\"\\nassistant_reply:\\n\", result.get('assistant_reply', ''))\n",
     "    tool_trace = result.get('tool_trace', '') or ''\n",
     "    if tool_trace:\n",
-    "        print('\n",
-    "tool_trace (first', trace_chars, 'chars):\n",
-    "', tool_trace[:trace_chars])\n",
+    "        print(f\"\\ntool_trace (first {trace_chars} chars):\\n{tool_trace[:trace_chars]}\")\n",
     "    else:\n",
-    "        print('\n",
-    "tool_trace: (empty)')\n",
+    "        print(\"\\ntool_trace: (empty)\")\n",
     "\n",
     "# Example usage after an agent run:\n",
     "# show_structured_outputs(response)\n"
